   
      - Public preview of Ghosts was broken. Fixed this by making the
        general public preview code slightly more robust.

      - Small context bug fixes in the LookupWindowWidget.

      - Changed mangle.Path.fromObject() so it doesn't return '' anymore when
        from and to objects are the same.
  
      - Some text related to reserved ids wasn't properly translated.

  1.5.2

    Bugs fixed

      - The cropping dialog was broken, fixed.

      - Fixed non-interpolation issues with message ids in the image
        UI.

  1.5.1

    Bugs fixed

      - The new lookup window was registering resources under the name
        scripts. This name is too broad and was in fact being
        overridden by a Silva extension that introduced its own
        scripts, causing the Silva core to break. Renamed this to
        silva_scripts in the core.

  1.5

    Bugs fixed

      - Container policies are not hardcoded anymore for container add
        forms (add folder or add publication). Instead, the
        information on what container policies are available is
        retrieved from the service where they are registered.

      - A lot more places where i18n interpolation wasn't taking place
        anymore (${foo} in message texts) are fixed by using an 
        explicit call to zope.i18n.translate() instead of unicode().

      - Restore "install default layout" functionality for ZODB
        layout; we were too vigorous in removing layout related code
        and removed too much.

      - Removed some more traces of FileSystemSite-based layout system.

      - Some fixes in the refactored lookup window code.

      - Some cleanups of GhostFolder code, fixing an error that
        appeared when Five views interacted with them.

      - Fix in Ghost code stops another error related to Five view
        interaction with acquisition.

      - Eliminated Zope 2.8.5 warnings on startup.

      - Access screen can be accessed again by authors.
 