@@ -22,6 +22,9 @@ Silva changes
   
       - Some text related to reserved ids wasn't properly translated.
 
+      - Fixed bug in XML export (to_xml()) of Link objects, escaping 
+        (entitizing) title and url properly now.
+
   1.5.2
 
     Bugs fixed
